--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "stripe": "^17.7.0",
     "subscriptions-transport-ws": "^0.11.0",
     "typeorm": "^0.3.24",
+    "typeorm-transactional": "^0.5.0",
     "ulid": "^3.0.0"
   },
   "devDependencies": {
